demo_Azure_multi-region-hub_peered-vnets/1_region-1_fgt_hub.tf
#------------------------------------------------------------------
# Create FGT HUB 
# - Config cluster FGSP
# - Create FGSP instances
# - Create vNet FGT
#------------------------------------------------------------------
// Create cluster config
module "r1_fgt_hub_config" {
  source = "git::github.com/jmvigueras/modules//azure/fgt-config"

  admin_cidr     = local.admin_cidr
  admin_port     = local.admin_port
  rsa-public-key = trimspace(tls_private_key.ssh.public_key_openssh)
  api_key        = trimspace(random_string.api_key.result)

  subnet_cidrs       = module.r1_fgt_hub_vnet.subnet_cidrs
  fgt-active-ni_ips  = module.r1_fgt_hub_vnet.fgt-active-ni_ips
  fgt-passive-ni_ips = module.r1_fgt_hub_vnet.fgt-passive-ni_ips

  /* (uncommet to configure SDN connector instead of using instance metadata)
  subscription_id = var.subscription_id
  client_id       = var.client_id
  client_secret   = var.client_secret
  tenant_id       = var.tenant_id
  */

  config_fgcp  = local.r1_hub_cluster_type == "fgcp" ? true : false
  config_fgsp  = local.r1_hub_cluster_type == "fgsp" ? true : false
  config_hub   = true
  config_vxlan = true

  hub            = local.r1_hub
  hub_peer_vxlan = local.r1_hub_peer_vxlan

  vpc-spoke_cidr = concat(local.r1_hub_vnet_spoke_cidrs, [module.r1_fgt_hub_vnet.subnet_cidrs["bastion"]])
}
// Create FGT cluster as HUB-ADVPN
// (Example with a full scenario deployment with all modules)
module "r1_fgt_hub" {
  source = "git::github.com/jmvigueras/modules//azure/fgt-ha"

  prefix                   = "${local.prefix}-r1-hub"
  location                 = local.region_1
  resource_group_name      = local.r1_resource_group_name == null ? azurerm_resource_group.r1_rg[0].name : local.r1_resource_group_name
  tags                     = local.tags
  storage-account_endpoint = local.storage-account_endpoint == null ? azurerm_storage_account.r1_storageaccount[0].primary_blob_endpoint : local.storage-account_endpoint
  size                     = local.fgt_size

  admin_username = local.admin_username
  admin_password = local.admin_password

  fgt-active-ni_ids  = module.r1_fgt_hub_vnet.fgt-active-ni_ids
  fgt-passive-ni_ids = module.r1_fgt_hub_vnet.fgt-passive-ni_ids
  fgt_config_1       = module.r1_fgt_hub_config.fgt_config_1
  fgt_config_2       = module.r1_fgt_hub_config.fgt_config_2

  fgt_passive = true
}
// Module VNET for FGT
// - This module will generate VNET and network intefaces for FGT cluster
module "r1_fgt_hub_vnet" {
  source = "git::github.com/jmvigueras/modules//azure/vnet-fgt"

  prefix              = "${local.prefix}-r1-hub"
  location            = local.region_1
  resource_group_name = local.r1_resource_group_name == null ? azurerm_resource_group.r1_rg[0].name : local.r1_resource_group_name
  tags                = local.tags

  vnet-fgt_cidr = local.r1_hub_vnet_cidr
  admin_port    = local.admin_port
  admin_cidr    = local.admin_cidr

  accelerate = true
}

#------------------------------------------------------------------
# - Create Load Balancers
# - Create vNet spoke peered to vNET FGT
# - Create VM in vNet spoke
#------------------------------------------------------------------
// Create load balancers
module "r1_xlb" {
  depends_on = [module.r1_fgt_hub_vnet]
  source     = "git::github.com/jmvigueras/modules//azure/xlb"

  prefix              = "${local.prefix}-r1"
  location            = local.region_1
  resource_group_name = local.r1_resource_group_name == null ? azurerm_resource_group.r1_rg[0].name : local.r1_resource_group_name
  tags                = local.tags

  config_gwlb        = local.config_gwlb
  ilb_ip             = local.r1_ilb_ip
  backend-probe_port = local.backend-probe_port

  subnet_private = {
    cidr    = module.r1_fgt_hub_vnet.subnet_cidrs["private"]
    id      = module.r1_fgt_hub_vnet.subnet_ids["private"]
    vnet_id = module.r1_fgt_hub_vnet.vnet["id"]
  }

  fgt-ni_ids = {
    fgt1_public  = module.r1_fgt_hub_vnet.fgt-active-ni_ids["public"]
    fgt1_private = module.r1_fgt_hub_vnet.fgt-active-ni_ids["private"]
    fgt2_public  = module.r1_fgt_hub_vnet.fgt-passive-ni_ids["public"]
    fgt2_private = module.r1_fgt_hub_vnet.fgt-passive-ni_ids["private"]
  }

  fgt-ni_ips = {
    fgt1_public  = module.r1_fgt_hub_vnet.fgt-active-ni_ips["public"]
    fgt1_private = module.r1_fgt_hub_vnet.fgt-active-ni_ips["private"]
    fgt2_public  = module.r1_fgt_hub_vnet.fgt-passive-ni_ips["public"]
    fgt2_private = module.r1_fgt_hub_vnet.fgt-passive-ni_ips["private"]
  }
}
// Create vNet spoke
module "r1_hub_vnet_spoke" {
  source = "git::github.com/jmvigueras/modules//azure/vnet-spoke"

  prefix              = "${local.prefix}-r1"
  location            = local.region_1
  resource_group_name = local.r1_resource_group_name == null ? azurerm_resource_group.r1_rg[0].name : local.r1_resource_group_name
  tags                = local.tags

  vnet-spoke_cidrs = local.r1_hub_vnet_spoke_cidrs
  vnet-fgt         = module.r1_fgt_hub_vnet.vnet
}
// Create VM in vNet spoke
module "r1_hub_vnet_spoke_vm" {
  source = "git::github.com/jmvigueras/modules//azure/new-vm_rsa-ssh"

  prefix                   = "${local.prefix}-r1-hub-vnet-spoke"
  location                 = local.region_1
  resource_group_name      = local.r1_resource_group_name == null ? azurerm_resource_group.r1_rg[0].name : local.r1_resource_group_name
  tags                     = local.tags
  storage-account_endpoint = local.storage-account_endpoint == null ? azurerm_storage_account.r1_storageaccount[0].primary_blob_endpoint : local.storage-account_endpoint
  admin_username           = local.admin_username
  rsa-public-key           = trimspace(tls_private_key.ssh.public_key_openssh)

  vm_ni_ids = [
    module.r1_hub_vnet_spoke.ni_ids["subnet1"][0],
    //module.r1_hub_vnet_spoke.ni_ids["subnet2"][0]
  ]
}

#--------------------------------------------------------------------------------
# Create UDR in vNet spoke subnet 1 and 2 to iLB
#--------------------------------------------------------------------------------
// Route-table definition
resource "azurerm_route_table" "r1_hub_vnet_spoke_rt" {
  name                = "${local.prefix}-r1-hub-vnet-spoke-rt"
  location            = local.region_1
  resource_group_name = local.r1_resource_group_name == null ? azurerm_resource_group.r1_rg[0].name : local.r1_resource_group_name

  disable_bgp_route_propagation = false

  route {
    name                   = "rfc1918-1"
    address_prefix         = "10.0.0.0/8"
    next_hop_type          = "VirtualAppliance"
    next_hop_in_ip_address = local.r1_ilb_ip
  }
  route {
    name                   = "rfc1918-2"
    address_prefix         = "192.168.0.0/16"
    next_hop_type          = "VirtualAppliance"
    next_hop_in_ip_address = local.r1_ilb_ip
  }
  route {
    name                   = "rfc1918-3"
    address_prefix         = "172.16.0.0/12"
    next_hop_type          = "VirtualAppliance"
    next_hop_in_ip_address = local.r1_ilb_ip
  }
}
// Route table association
resource "azurerm_subnet_route_table_association" "r1_rta-spoke-subnet-1" {
  subnet_id      = module.r1_hub_vnet_spoke.subnet_ids["subnet_1"][0]
  route_table_id = azurerm_route_table.r1_hub_vnet_spoke_rt.id
}
// Route table association
resource "azurerm_subnet_route_table_association" "r1_rta-spoke-subnet-2" {
  subnet_id      = module.r1_hub_vnet_spoke.subnet_ids["subnet_2"][0]
  route_table_id = azurerm_route_table.r1_hub_vnet_spoke_rt.id
}

#--------------------------------------------------------------------------------
# Create peering vNet FGT HUBs r1 and r2
#--------------------------------------------------------------------------------
resource "azurerm_virtual_network_peering" "peer-hubs-1" {
  name                      = "${local.prefix}-peer-to-hub-r1"
  resource_group_name       = local.r1_resource_group_name == null ? azurerm_resource_group.r1_rg[0].name : local.r1_resource_group_name
  virtual_network_name      = module.r1_fgt_hub_vnet.vnet["name"]
  remote_virtual_network_id = module.r2_fgt_hub_vnet.vnet["id"]
  allow_forwarded_traffic   = true
}
resource "azurerm_virtual_network_peering" "peer-hubs-2" {
  name                      = "${local.prefix}-peer-to-hub-r2"
  resource_group_name       = local.r2_resource_group_name == null ? azurerm_resource_group.r2_rg[0].name : local.r2_resource_group_name
  virtual_network_name      = module.r2_fgt_hub_vnet.vnet["name"]
  remote_virtual_network_id = module.r1_fgt_hub_vnet.vnet["id"]
  allow_forwarded_traffic   = true
}
